@@ -6,6 +6,7 @@ CHANGELOG
 ----------
 ### Changelog extractor
 * Ignoring hidden files: allow ./
+* Allow single dashes, ignore two dashes
 
 2021-11-15
 ----------
